--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,20 @@
 version: "3"
 
 services:
-  bot:
+  reviewbot:
     build: .
-    container_name: bot
-    command: python3 app.py
+    container_name: reviewbot
+    command: python3 reviewbot/app.py
+    env_file: ./.env
+    volumes:
+      - .:/app
+    depends_on:
+      - db
+
+  salesbot:
+    build: .
+    container_name: salesbot
+    command: python3 salebot/app.py
     env_file: ./.env
     volumes:
       - .:/app
@@ -12,13 +22,13 @@ services:
       - db
 
   admin:
-    command: python3 manage.py runserver 0.0.0.0:8000
-    container_name: admin
     build: .
+    container_name: admin
+    command: python3 manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
-      - "80:8000"
+      - "8000:8000"
     depends_on:
       - db
 
