Add the new bot settings

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,16 @@ services:
       - .:/app
     depends_on:
       - db
+  
+  salesdoctorbot:
+    build: .
+    container_name: salesdoctorbot
+    command: python3 salesdoctorbot/app.py
+    env_file: ./.env
+    volumes:
+      - .:/app
+    depends_on:
+      - db
 
   admin:
     build: .
