This is a test commit

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,8 @@
-ADMINS=12345678,12345677,12345676
-BOT_TOKEN=123452345243:Asdfasdfasf
+ADMINS=1180612659
+BOT_TOKEN1=BOT_TOKEN1_HERE
+BOT_TOKEN2=BOT_TOKEN2_HERE
+BOT_TOKEN3=BOT_TOKEN3_HERE
+GROUP_ID=-1002189843423
 ip=localhost
 
 POSTGRES_DB=postgres_db
@@ -7,3 +10,15 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres_password
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
+DEBUG=True
+ALLOWED_HOSTS=*
+
+AWS_ACCESS_KEY_ID=ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=SECRET_ACCESS_KEY
+
+#salesDoctor API
+SD_LOGIN_URL=https://xondecor.salesdoc.io/api/v2/
+
+SD_LOGIN=sd_login
+SD_PASSWORD=sd_password
